--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,10 @@
 		{
 			"type": "vcs",
             "url": "git@github.com:messagedigital/cog-mothership-cp.git"
+		},
+		{
+			"type": "vcs",
+            "url": "git@github.com:messagedigital/cog-mothership-file-manager.git"
 		}
 	],
 	"minimum-stability": "dev",
@@ -34,7 +38,9 @@
 		"php": ">=5.3.0",
 
 		"message/cog"              : "dev-master",
-		"message/cog-mothership-cp": "dev-master"
+		"message/cog-mothership-cp": "dev-master",
+		"message/cog-mothership-file-manager": "dev-master"
+
 	},
 	"suggest": {
 	}
