--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	],
 	"support": {
 		"wiki"  : "http://server.local/wiki/projects/cog",
-		"issues": "http://server.local:3000/cog/cog-cms/issues"
+		"issues": "http://github.com/messagedigital/cog-mothership-file-manager/issues"
 	},
 	"autoload": {
 		"psr-0": {
@@ -21,18 +21,14 @@
 	},
 	"repositories": [
 		{
-			"type": "vcs",
-            "url": "git@github.com:messagedigital/cog.git"
-		},
-		{
-			"type": "vcs",
-            "url": "git@github.com:messagedigital/cog-mothership-cp.git"
+			"type": "composer",
+			"url" : "http://packages.message.co.uk"
 		}
 	],
 	"minimum-stability": "dev",
 	"require": {
 		"php": ">=5.3.0",
-		"message/cog"              : "dev-master",
+
 		"message/cog-mothership-cp": "dev-master"
 	},
 	"suggest": {
