--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,10 @@
 			"url" : "http://packages.message.co.uk"
 		}
 	],
-	"minimum-stability": "dev",
 	"require": {
 		"php": ">=5.3.0",
 
-		"message/cog-mothership-cp": "dev-master"
+		"message/cog-mothership-cp": "dev-master as 1.0.x-dev"
 	},
 	"suggest": {
 	}
