--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,13 @@
 	"require": {
 		"php": ">=5.3.0",
 
-		"message/cog-mothership-cp": "dev-master as 1.0.x-dev"
+		"message/cog-mothership-cp": "1.0.*"
 	},
 	"suggest": {
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "1.0.x-dev"
+		}
 	}
 }
