--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 	"require": {
 		"php": ">=5.3.0",
 
-		"message/cog-mothership-cp": "1.0.*"
+		"message/cog-mothership-cp": "1.0.*@dev"
 	},
 	"suggest": {
 	},
