--- a/composer.json
+++ b/composer.json
@@ -27,15 +27,10 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.0",
+		"php": ">=5.4.0",
 
-		"message/cog-mothership-cp": "1.*"
+		"message/cog-mothership-cp": "~1.0"
 	},
 	"suggest": {
-	},
-	"extra": {
-		"branch-alias": {
-			"dev-master": "1.0.x-dev"
-		}
 	}
 }
