--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
 	"require": {
 		"php": ">=5.4.0",
 
+		"message/cog-imageresize"  : "~1.0",
 		"message/cog-mothership-cp": "~1.0"
 	},
 	"suggest": {
