--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 	"require": {
 		"php": ">=5.4.0",
 
-		"message/cog"              : "~3.1",
+		"message/cog"              : "dev-feature/lazy-loading as 3.1.0",
 		"message/cog-imageresize"  : "~1.0",
 		"message/cog-mothership-cp": "~1.1"
 	},
