--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 
 		"message/cog"              : "~3.4",
 		"message/cog-imageresize"  : "~1.0",
-		"message/cog-mothership-cp": "~2.0"
+		"message/cog-mothership-cp": "~1.1 | ~2.0"
 	},
 	"suggest": {
 	}
