--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"license": "GPL-3.0+",
 	"authors": [
 		{
-			"name" : "The Message Development Team",
+			"name" : "The Mothership Development Team",
 			"email": "dev@mothership.ec"
 		}
 	],
